add login model and back end

--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://mohamed:aDiqJwj1wO7ePIP7@atlascluster.cgyd67g.mongodb.net/airbnb?retryWrites=true&w=majority&appName=AtlasApp"
+
+GOOGLE_CLIENT_SECRET =  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
+
+GOOGLE_CLIENT_ID = 794658959971-iueqs6058g7r93adibup5but35t96b56.apps.googleusercontent.com
+
+NODE_ENV = 
+
+NEXTAUTH_SECRET = secret
