--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ GOOGLE_CLIENT_ID = 794658959971-iueqs6058g7r93adibup5but35t96b56.apps.googleuser
 NODE_ENV = 
 
 NEXTAUTH_SECRET = secret
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dzwz8hiko"
