--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet": "^1.9.4",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.20.0",
     "query-string": "^8.2.0",
     "react": "^18",
     "react-dom": "^18",
