--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.1",
     "@prisma/client": "^5.9.1",
+    "@types/react-date-range": "^1.4.9",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "leaflet": "^1.9.4",
     "next": "14.1.0",
@@ -20,6 +22,7 @@
     "next-cloudinary": "^5.20.0",
     "query-string": "^8.2.0",
     "react": "^18",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
