--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.1",
+    "@gsap/react": "^2.1.0",
     "@prisma/client": "^5.9.1",
     "@types/react-date-range": "^1.4.9",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
+    "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
