[FIXED] fixed errors

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://mohamed:aDiqJwj1wO7ePIP7@atlascluster.cgyd67g.mongodb.net/airbnb?retryWrites=true&w=majority&appName=AtlasApp"
+DATABASE_URL="mongodb+srv://kandaddev:xN0nAi5bqG5EMHjX@cluster0.ww5bo.mongodb.net/airbnb"
 
 GOOGLE_CLIENT_SECRET =  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
 
