--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@prisma/client": "^5.9.1",
     "@types/react-date-range": "^1.4.9",
     "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "gsap": "^3.12.5",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
