--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "no-console": "off", // Disables the 'no-console' rule
+    "react/react-in-jsx-scope": "off", // Disables the 'react/react-in-jsx-scope' rule for Next.js
+    // Add more rules as needed
+  }
 }
