[FIXED] fixed errors

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ GOOGLE_CLIENT_SECRET =  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
 
 GOOGLE_CLIENT_ID = 794658959971-iueqs6058g7r93adibup5but35t96b56.apps.googleusercontent.com
 
-NODE_ENV = 
+NODE_ENV = production
 
 NEXTAUTH_SECRET = secret
 
