--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.1",
     "@gsap/react": "^2.1.0",
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.22.0",
     "@types/react-date-range": "^1.4.9",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
@@ -19,7 +19,7 @@
     "formik": "^2.4.5",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
-    "next": "14.1.0",
+    "next": "^15.1.0",
     "next-auth": "^4.24.5",
     "next-cloudinary": "^5.20.0",
     "query-string": "^8.2.0",
@@ -45,7 +45,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.9.1",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
